// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//
// Arrow Flight protocol definition (simplified for TypeScript client)

syntax = "proto3";

package arrow.flight.protocol;

option java_package = "org.apache.arrow.flight.impl";
option csharp_namespace = "Apache.Arrow.Flight.Protocol";

// A flight service is an endpoint for retrieving or storing Arrow data.
service FlightService {
  // Handshake between client and server. Depending on the server, the
  // handshake may be required to determine the token that should be used for
  // future operations.
  rpc Handshake(stream HandshakeRequest) returns (stream HandshakeResponse);

  // Get a list of available streams given a particular criteria.
  rpc ListFlights(Criteria) returns (stream FlightInfo);

  // For a given FlightDescriptor, get information about how the flight can be
  // consumed.
  rpc GetFlightInfo(FlightDescriptor) returns (FlightInfo);

  // For a given FlightDescriptor, start a query and get information
  // to poll its execution status.
  rpc PollFlightInfo(FlightDescriptor) returns (PollInfo);

  // For a given FlightDescriptor, get the Schema as described in Schema.fbs::Schema.
  rpc GetSchema(FlightDescriptor) returns (SchemaResult);

  // Retrieve a single stream associated with a particular descriptor
  // associated with the referenced ticket.
  rpc DoGet(Ticket) returns (stream FlightData);

  // Push a stream to the flight service associated with a particular
  // flight stream.
  rpc DoPut(stream FlightData) returns (stream PutResult);

  // Open a bidirectional data channel for a given descriptor.
  rpc DoExchange(stream FlightData) returns (stream FlightData);

  // Flight services can support an arbitrary number of simple actions in
  // addition to the possible ListFlights, GetFlightInfo, DoGet, DoPut
  // operations that are potentially available.
  rpc DoAction(Action) returns (stream Result);

  // A flight service exposes all of the available action types that it has
  // along with descriptions.
  rpc ListActions(Empty) returns (stream ActionType);
}

// The request that a client provides to a server on handshake.
message HandshakeRequest {
  // A defined protocol version
  uint64 protocol_version = 1;

  // Arbitrary auth/handshake info
  bytes payload = 2;
}

// The response a server provides to a client on handshake.
message HandshakeResponse {
  // A defined protocol version
  uint64 protocol_version = 1;

  // Arbitrary auth/handshake info
  bytes payload = 2;
}

// A message for doing simple auth
message BasicAuth {
  string username = 2;
  string password = 3;
}

// An empty message
message Empty {}

// Describes an available action, including both the name used for execution
// along with a short description of the purpose of the action.
message ActionType {
  string type = 1;
  string description = 2;
}

// A service specific expression used to produce a filter.
message Criteria {
  bytes expression = 1;
}

// An opaque action specific for the service.
message Action {
  string type = 1;
  bytes body = 2;
}

// An opaque result returned after executing an action.
message Result {
  bytes body = 1;
}

// Wrap the result of a getSchema call
message SchemaResult {
  // The schema of the dataset in its IPC form:
  //   4 bytes - an optional IPC_CONTINUATION_TOKEN prefix
  //   4 bytes - the byte length of the payload
  //   a flatbuffer Message whose header is the Schema
  bytes schema = 1;
}

// The name or tag for a Flight. May be used as a way to retrieve or generate
// a flight or be used to expose a set of previously defined flights.
message FlightDescriptor {
  // Describes what type of descriptor is defined.
  enum DescriptorType {
    // Protobuf pattern, not used.
    UNKNOWN = 0;

    // A named path that identifies a dataset.
    PATH = 1;

    // An opaque command to generate a dataset.
    CMD = 2;
  }

  DescriptorType type = 1;

  // Opaque value used to express a command. Should only be defined when
  // type = CMD.
  bytes cmd = 2;

  // List of strings identifying a particular dataset. Should only be defined
  // when type = PATH.
  repeated string path = 3;
}

// The access coordinates for retrieval of a dataset. With a FlightInfo, a
// consumer can determine how to retrieve a dataset.
message FlightInfo {
  // The schema of the dataset in its IPC form:
  //   4 bytes - an optional IPC_CONTINUATION_TOKEN prefix
  //   4 bytes - the byte length of the payload
  //   a flatbuffer Message whose header is the Schema
  bytes schema = 1;

  // The descriptor associated with this info.
  FlightDescriptor flight_descriptor = 2;

  // A list of endpoints associated with the flight. To consume the
  // whole flight, all endpoints (and hence all Tickets) must be
  // consumed. Endpoints can be consumed in any order.
  //
  // In other words, an application can use multiple endpoints to
  // represent partitioned data.
  //
  // If the returned data has an ordering, an application can use
  // "FlightInfo.ordered = true" or should return the all data in a
  // single endpoint. Otherwise, there is no ordering defined on
  // endpoints or the data within.
  //
  // A client can read ordered data by reading data from returned
  // endpoints, in order, from front to back.
  //
  // Note that a client may ignore "FlightInfo.ordered = true". If an
  // ordering is important for an application, an application must
  // choose one of them:
  //
  // * An application requires that all clients must read data in
  //   returned endpoints order.
  // * An application must return the all data in a single endpoint.
  repeated FlightEndpoint endpoint = 3;

  // Set these to -1 if unknown.
  int64 total_records = 4;
  int64 total_bytes = 5;

  // FlightEndpoints are in the same order as the data.
  bool ordered = 6;

  // Application-defined metadata.
  //
  // There is no inherent or required relationship between this
  // and the app_metadata fields in the FlightEndpoints or resulting
  // FlightData messages. Since this metadata is application-defined,
  // a given application could define there to be a relationship,
  // but there is none required by the spec.
  bytes app_metadata = 7;
}

// The information to process a long-running query.
message PollInfo {
  // The currently available results.
  //
  // If "weights" is not empty, this FlightInfo only contains a
  // portion of the results. Otherwise, this FlightInfo contains all
  // results.
  FlightInfo info = 1;

  // The descriptor the client should use on the next try.
  // If unset, the query is complete and GetFlightInfo currently
  // contains all results. Otherwise, the client should call
  // PollFlightInfo with this descriptor to continue.
  FlightDescriptor flight_descriptor = 2;

  // Query progress. If known, must be in [0.0, 1.0] but need not be
  // monotonically increasing.
  optional double progress = 3;

  // Expiration time for this request. After this passes, the server
  // might not accept the retry descriptor anymore (and the query may
  // be cancelled). This may be updated on a call to PollFlightInfo.
  optional int64 expiration_time = 4;
}

// A particular stream or split associated with a flight.
message FlightEndpoint {
  // Token used to retrieve this stream.
  Ticket ticket = 1;

  // A list of URIs where this ticket can be redeemed via DoGet().
  //
  // If the list is empty, the ticket can only be redeemed on the
  // current service where the ticket was generated.
  //
  // If the list is not empty, the ticket can be redeemed at any of the
  // locations, and at least one of the locations should be the same
  // location as was used to generate the ticket.
  //
  // Locations may contain the same host but different ports. They
  // may also be different hosts.
  repeated Location location = 2;

  // Expiration time of this stream. If present, clients may assume
  // they can retry DoGet requests. Otherwise, it is
  // application-defined whether DoGet requests may be retried.
  optional int64 expiration_time = 3;

  // Application-defined metadata.
  //
  // There is no inherent or required relationship between this
  // and the app_metadata fields in the FlightInfo or resulting
  // FlightData messages. Since this metadata is application-defined,
  // a given application could define there to be a relationship,
  // but there is none required by the spec.
  bytes app_metadata = 4;
}

// A location where a Flight service will accept retrieval of a particular
// stream given a ticket.
message Location {
  string uri = 1;
}

// An opaque identifier that the service can use to retrieve a particular
// portion of a stream.
//
// Tickets are meant to be single use. It is an error/application-defined
// behavior to reuse a ticket.
message Ticket {
  bytes ticket = 1;
}

// A batch of Arrow data as part of a stream of batches.
message FlightData {
  // The descriptor of the data. This is only relevant when a client is
  // starting a new DoPut stream.
  FlightDescriptor flight_descriptor = 1;

  // Header for message data as described in Message.fbs::Message.
  bytes data_header = 2;

  // Application-defined metadata.
  bytes app_metadata = 3;

  // The actual batch of Arrow data. Preferably handled with minimal-copies
  // coming last in the definition to help with sidecar patterns (it is
  // expected that some implementations will fetch this field off the wire
  // with specialized code to avoid extra memory copies).
  bytes data_body = 1000;
}

// The response message associated with the submission of a DoPut.
message PutResult {
  bytes app_metadata = 1;
}
